--- a/aula2html.html
+++ b/aula2html.html
@@ -1,12 +1,31 @@
 <html>
     <head>
-        <title>Minha Pagina</title>
+        <title>Vendo minha cerveja</title>
         <title>Primeira pagina</title>
         <meta charset="UTF-8" />
         <meta lang="pt-BR" />
         <meta name="author" content="Marcos dos Santos" />
-        <meta name="version" content="0.0.1" />
+        <meta name="version" content="0.0.2" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <style>
+            h1{
+                font-family: Arial;
+                color: darkgoldenrod;
+                text-shadow: 1px 1px 1px black;
+            }
+            h2{
+                font-family: Arial;
+                color: darkgoldenrod;
+                text-shadow: 1px 1px 1px black;
+            }
+            article{
+                font-family: Arial;
+            }
+            p{
+                font-family: Arial;
+            }
+
+        </style>
     </head>
     <center><body>
         <main>
@@ -15,8 +34,8 @@
             
             <article>
               <h2>Cervejeiros artesanais</h2>
-              <p>O numero de cervejarias astesanais anda cresendo muito, junto o numero de consumdores, sendo assim o site <b> "Vendo Minha Cerveja"</b></p>
-              <p>veio pra ajudar quem produz, e tambem quem consome a se encontrarar.</p>
+              <p>O numero de cervejarias astesanais anda cresendo muito, junto com o numero de consumdores, sendo assim o site <b> "Vendo Minha Cerveja"</b></p>
+              <p>veio pra ajudar quem produz a divulgar sua cerveja pro grende publico.</p>
               <h2>Cadastre sua cervejaria a baixo:</h2> 
                 
             </article>
@@ -49,15 +68,19 @@
           </form>
           <footer>
               <tr><td><h2>Redes sociais</h2></td></tr>
-              <tr><td><img src="https://logospng.org/download/facebook-like/logo-facebook-like-256.png" 
+              <tr><td><a href="https://www.facebook.com/" target="_blank"><img src="https://logospng.org/download/facebook-like/logo-facebook-like-256.png" 
                            alt="ocorreu um erro"
-                           title="Facebook"></td>
-                  <td><img src="https://images.vexels.com/media/users/3/137198/isolated/lists/07f0d7b69ef071571e4ada2f4d6a053a-icone-do-instagram-colorido.png" 
+                           title="Facebook"
+                           width="100"></a></td>
+                  <td><a href="https://www.instagram.com/" target="_blank"><img src="https://images.vexels.com/media/users/3/137198/isolated/lists/07f0d7b69ef071571e4ada2f4d6a053a-icone-do-instagram-colorido.png" 
                            alt="ocorreu um erro"
-                           title="Instagran"></td>
-                  <td><img src="https://1.bp.blogspot.com/-XXTSxkYUbxA/Wws5j3-KC-I/AAAAAAAAH5Q/NzpolixiXuEv-cFxZjV-jpwjUj3Zg5J3gCLcBGAs/s1600/twitter-icon-iconfinder.png" 
+                           title="Instagran"
+                           width="100"
+                           ></a></td>
+                  <td><a href="https://www.twitter.com/" target="_blank"><img src="https://1.bp.blogspot.com/-XXTSxkYUbxA/Wws5j3-KC-I/AAAAAAAAH5Q/NzpolixiXuEv-cFxZjV-jpwjUj3Zg5J3gCLcBGAs/s1600/twitter-icon-iconfinder.png" 
                            alt="ocorreu um erro"
-                           title="Twitter"></td>         
+                           title="Twitter"
+                           width="100"></a></td>         
               </tr>
           </footer>
 
